fix gap + version bump

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -565,6 +565,7 @@ body.idle {
   }
   .bar:nth-child(4) {
     left: 42.9%;
+    width: 14.5%;
     background: #377519;
     -webkit-transition-delay: 0.3s;
     -moz-transition-delay: 0.3s;
